--- a/src/app/comments/comment.component.html
+++ b/src/app/comments/comment.component.html
@@ -1,25 +1,35 @@
 <div class="card">
-  <div *ngIf="!editing;else editable" class="card-body">
-    <app-votes class="float-right" [model]="model" type="comment"></app-votes>
-    <ng-container *ngIf="model.user_id && model.user_name">
-      <fa-icon class="user-icon" icon="user-circle"></fa-icon>
-      <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
-    </ng-container>
+  <div *ngIf="!editing; else editable" class="card-body">
 
-    <small class="d-block"><fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> {{ model.timestamp | timeDifference }} ago</small>
+    <app-votes class="float-right" [model]="model" type="comment"></app-votes>
+
+    <ul class="list-inline" *ngIf="model.user_id && model.user_name">
+      <li class="list-inline-item">
+        <fa-icon class="user-icon" icon="user-circle"></fa-icon>
+        <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
+      </li>
+      <li class="list-inline-item">
+        <fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> {{ model.timestamp | timeDifference }} ago
+      </li>
+    </ul>
+
+
+
     <p class="card-text">{{ model.comment_body }}</p>
-    <button *ngIf="showEdit" type="button" (click)="onEdit()" class="btn btn-primary float-right">
+    <button *ngIf="showEdit" type="button" (click)="onEdit()" class="btn btn-sm btn-primary float-right">
       <fa-icon icon="edit"></fa-icon> Edit
     </button>
+
   </div>
+
   <ng-template #editable>
     <div class="card-body">
       <form [formGroup]="form" (ngSubmit)="submit(data)">
         <formly-form [form]="form" [fields]="fields" [model]="data">
-          <button type="submit" [disabled]="!form.valid" class="btn btn-primary float-right">
+          <button type="submit" [disabled]="!form.valid" class="btn btn-sm btn-primary float-right">
             <fa-icon icon="save"></fa-icon> Submit
           </button>
-          <button *ngIf="!isNew" type="button" (click)="onCancel()" class="btn btn-default mr-2 float-right">
+          <button *ngIf="!isNew" type="button" (click)="onCancel()" class="btn btn-sm btn-default mr-2 float-right">
             <fa-icon icon="times"></fa-icon> Cancel
           </button>
         </formly-form>
