--- a/src/app/threads/thread-list-item/thread-list-item.component.html
+++ b/src/app/threads/thread-list-item/thread-list-item.component.html
@@ -1,19 +1,26 @@
 <div class="card">
+
   <div class="card-body">
-    <div class="d-lg-none">
-      <small><fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> Posted {{ model.timestamp | timeDifference }} ago.</small>
-    </div>
-    <small class="float-right d-none d-lg-inline">
-      <fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> Posted {{ model.timestamp | timeDifference }} ago.
-    </small>
-    <a class="card-title d-block" [routerLink]="'/threads/' + model.thread_id">{{ model.thread_title }}</a>
-    <ng-container *ngIf="model.user_name">
-      <fa-icon class="user-icon" icon="user-circle"></fa-icon>
-      <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
-    </ng-container>
+
+    <h5>
+      <a class="card-title d-block" [routerLink]="'/threads/' + model.thread_id">{{ model.thread_title }}</a>
+    </h5>
+
+    <hr>
+
+    <ul class="list-inline">
+      <li class="list-inline-item" *ngIf="model.user_name">
+        <fa-icon class="user-icon" icon="user-circle"></fa-icon>
+        <a [routerLink]="'/users/' + model.user_id" class="user-link">{{ model.user_name }}</a>
+      </li>
+      <li class="list-inline-item">
+        <fa-icon class="clock-icon" [icon]="['far', 'clock']"></fa-icon> Posted {{ model.timestamp | timeDifference }} ago.
+      </li>
+    </ul>
 
     <app-votes class="float-right" [model]="model" type="thread"></app-votes>
 
     <p class="card-text">{{ model.thread_body }}</p>
   </div>
+
 </div>
