--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,23 @@
 <app-navbar></app-navbar>
 <div class="container-fluid angularit-container">
+
   <div class="row">
     <div class="col-lg-4 offset-lg-4">
+
       <div class="card mt-5">
         <div class="card-body">
+
           <form [formGroup]="form" (ngSubmit)="submit(model)">
             <formly-form [form]="form" [fields]="fields" [model]="model">
-              <button type="submit" [disabled]="!form.valid" class="btn btn-primary">Login</button>
+              <button type="submit" class="btn btn-primary">Login</button>
               <small class="pl-3">Don't have an account yet? Sign up <a routerLink="/register">here</a>.</small>
             </formly-form>
           </form>
+
         </div>
       </div>
+
     </div>
   </div>
+
 </div>
