--- a/src/app/comments/comment.component.html
+++ b/src/app/comments/comment.component.html
@@ -29,7 +29,7 @@
 
       <form [formGroup]="form" (ngSubmit)="submit(data)">
         <formly-form [form]="form" [fields]="fields" [model]="data">
-          <button type="submit" class="btn btn-sm btn-primary float-right">
+          <button type="submit" class="btn btn-sm btn-secondary float-right">
             <fa-icon icon="save"></fa-icon>
             Submit
           </button>
