--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/variables';
+@import '../../styles/variables';
 
 nav.navbar {
   background-color: $primary;
@@ -17,6 +17,7 @@ nav.navbar {
     ul li a {
       color: $highlight;
       font-weight: 500;
+      font-size: 15px;
     }
   }
   button.navbar-toggler {
