--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,7 @@ $highlight: #C2F970;
 $text-grey: #626868;
 $text-highlight: #484C4C;
 $background-grey: #E1D6D7;
+$danger: #D9534F;
 
 $black: #000000;
 $white: #FFFFFF;
