--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
           <form [formGroup]="form" (ngSubmit)="submit(model)">
             <formly-form [form]="form" [fields]="fields" [model]="model">
               <button type="submit" class="btn btn-primary">Login</button>
-              <small class="pl-3">Don't have an account yet? Sign up <a routerLink="/register">here</a>.</small>
+              <p class="pl-3 d-inline">Don't have an account yet? Sign up <a routerLink="/register">here</a>.</p>
             </formly-form>
           </form>
 
