--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -10,7 +10,7 @@
           <form [formGroup]="form" (ngSubmit)="submit(model)">
             <formly-form [form]="form" [fields]="fields" [model]="model">
               <button type="submit" class="btn btn-primary">Sign up</button>
-              <small class="pl-3">Already have an account? Go to <a routerLink="/login">login</a>.</small>
+              <p class="pl-3 d-inline">Already have an account? Go to <a routerLink="/login">login</a>.</p>
             </formly-form>
           </form>
 
